wsc2022-korea-tp2/stub-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stub
  namespace: unicorn
  labels:
    app: stub
spec:
  replicas: 2
  selector:
    matchLabels:
      app: stub
  template:
    metadata:
      labels:
        app: stub
    spec:
      serviceAccountName: stub
      containers:
        - name: stub
          image: 314146331900.dkr.ecr.ap-southeast-1.amazonaws.com/stub:v0
          ports:
            - containerPort: 80
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "1"
          volumeMounts:
          - name: persistent-storage
            mountPath: /data
      volumes:
      - name: persistent-storage
        persistentVolumeClaim:
          claimName: efs-claim
