wsc2022-korea-tp2/root-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: root
  namespace: unicorn
spec:
  type: ClusterIP
  selector:
    app: root
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
