wsc2022-korea-tp2/stub-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: stub
  namespace: unicorn
spec:
  type: ClusterIP
  selector:
    app: stub
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
