wsc2022-korea-tp2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: unicorn
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /stub
            pathType: Prefix
            backend:
              service:
                name: stub
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: root
                port:
                  number: 80
